Add findPrimaryConstructor and expand javadocs
Introduce BeanUtils.findPrimaryConstructor (with a MethodHandle-backed helper) to expose Kotlin primary constructor lookup. Expand and clarify Javadoc, usage examples, and parameter/return contracts across many classes related to bean dependency resolution and lifecycle (AbstractInjectionPointDependencyResolver, BeanMethodInjectionPointDependencyResolver, ConstructionInjectionPointDependencyResolver, DefaultBeanDependencyResolver, DelegatingFactoryBean, Dependency, etc.). Changes are primarily documentation and API clarification; functional behavior is unchanged aside from the new API. Minor POM and test updates included.