@@ -47,32 +47,34 @@ public class Dependency {
     boolean duplicated = false;
 
     /**
-     * Constructs a {@link Dependency} with the given bean name and no parent or children.
+     * Constructs a {@link Dependency} with the specified bean name, no parent, and no children.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
-     *   Dependency dep = new Dependency("myBean");
+     *   Dependency a = new Dependency("A");
      * }</pre>
      *
-     * @param beanName the name of the Spring bean, must not be blank
+     * @param beanName the name of the Spring bean; must not be blank
+     * @throws IllegalArgumentException if {@code beanName} is blank
      */
     protected Dependency(String beanName) {
         this(beanName, null, emptyList());
     }
 
     /**
-     * Constructs a {@link Dependency} with the given bean name, parent, and children.
+     * Constructs a {@link Dependency} with the specified bean name, parent, and children.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
-     *   Dependency parent = Dependency.create("parentBean");
-     *   List<Dependency> kids = List.of(Dependency.create("child1"));
-     *   Dependency dep = new Dependency("myBean", parent, kids);
+     *   Dependency parent = Dependency.create("A");
+     *   List<Dependency> children = Arrays.asList(Dependency.create("B"));
+     *   Dependency dep = new Dependency("C", parent, children);
      * }</pre>
      *
-     * @param beanName the name of the Spring bean, must not be blank
+     * @param beanName the name of the Spring bean; must not be blank
      * @param parent   the parent dependency, or {@code null} if this is a root
-     * @param children the initial collection of child dependencies
+     * @param children the initial child dependencies to add
+     * @throws IllegalArgumentException if {@code beanName} is blank
      */
     protected Dependency(String beanName, Dependency parent, Collection<Dependency> children) {
         hasText(beanName, "The bean name of dependency must not be blank");
@@ -82,17 +84,17 @@ public class Dependency {
     }
 
     /**
-     * Sets the parent dependency of this node.
+     * Sets the parent of this dependency.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
-     *   Dependency parent = Dependency.create("A");
-     *   Dependency child = Dependency.create("B");
-     *   child.setParent(parent);
+     *   Dependency a = Dependency.create("A");
+     *   Dependency b = Dependency.create("B");
+     *   b.setParent(a);
      * }</pre>
      *
      * @param parent the parent dependency to set
-     * @return this {@link Dependency} instance for fluent chaining
+     * @return this dependency for method chaining
      */
     public Dependency setParent(Dependency parent) {
         this.parent = parent;
@@ -100,20 +102,20 @@ public class Dependency {
     }
 
     /**
-     * Traverses up the dependency hierarchy to find and return the root dependency.
-     * If this dependency has no parent, it returns itself.
+     * Returns the root dependency of this dependency tree by traversing up the parent chain.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
      *   Dependency a = Dependency.create("A");
-     *   a.addChild("B");
-     *   Dependency c = a.addChild("C").child("C");
-     *   c.addChild("D");
-     *   assertEquals(a, c.root()); // root of C is A
-     *   assertEquals(a, a.root()); // root of A is itself
+     *   Dependency c = a.addChild("B")
+     *           .addChild("C")
+     *           .child("C")
+     *           .addChildren("D", "E");
+     *   Dependency root = c.root();
+     *   // root is the same instance as a
      * }</pre>
      *
-     * @return the root {@link Dependency} in the hierarchy
+     * @return the root dependency (the ancestor with no parent); returns {@code this} if it has no parent
      */
     public Dependency root() {
         Dependency root = this;
@@ -124,105 +126,110 @@ public class Dependency {
     }
 
     /**
-     * Returns the parent dependency of this node, or {@code null} if this is the root.
+     * Returns the parent dependency of this dependency.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
      *   Dependency a = Dependency.create("A");
-     *   a.addChild("B");
-     *   Dependency b = a.child("B");
-     *   assertEquals(a, b.parent()); // parent of B is A
+     *   a.addChild("C");
+     *   Dependency parentOfC = a.child("C").parent();
+     *   // parentOfC equals a
      * }</pre>
      *
-     * @return the parent {@link Dependency}, or {@code null}
+     * @return the parent dependency, or {@code null} if this is the root
      */
     public Dependency parent() {
         return this.parent;
     }
 
     /**
-     * Adds a child dependency with the specified bean name.
+     * Creates and adds a child dependency with the given bean name to this dependency.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
      *   Dependency a = Dependency.create("A");
-     *   a.addChild("B");
-     *   Dependency b = a.child("B"); // retrieve child B
+     *   a.addChild("B").addChild("C");
+     *   // a now has children "B" and "C"
      * }</pre>
      *
-     * @param childBeanName the bean name of the child dependency
-     * @return this {@link Dependency} instance for fluent chaining
+     * @param childBeanName the bean name of the child dependency to add
+     * @return this dependency for method chaining
      */
     public Dependency addChild(String childBeanName) {
         return this.doAddChild(create(childBeanName));
     }
 
     /**
-     * Adds multiple child dependencies from the given bean names varargs.
+     * Creates and adds multiple child dependencies with the given bean names to this dependency.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
-     *   Dependency a = Dependency.create("A");
-     *   a.addChildren("B", "C", "D");
+     *   Dependency c = Dependency.create("C");
+     *   c.addChildren("D", "E");
+     *   // c now has children "D" and "E"
      * }</pre>
      *
-     * @param childBeanNames the bean names of the child dependencies
-     * @return this {@link Dependency} instance for fluent chaining
+     * @param childBeanNames the bean names of the child dependencies to add
+     * @return this dependency for method chaining
      */
     public Dependency addChildren(String... childBeanNames) {
         return this.addChildren(ofList(childBeanNames));
     }
 
     /**
-     * Adds multiple child dependencies from the given {@link Iterable} of bean names.
+     * Creates and adds multiple child dependencies from an {@link Iterable} of bean names.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
-     *   Dependency a = Dependency.create("A");
-     *   List<String> names = List.of("B", "C");
-     *   a.addChildren(names);
+     *   Dependency c = Dependency.create("C");
+     *   List<String> names = Arrays.asList("D", "E");
+     *   c.addChildren(names);
+     *   // c now has children "D" and "E"
      * }</pre>
      *
-     * @param childBeanNames an iterable of bean names for the child dependencies
-     * @return this {@link Dependency} instance for fluent chaining
+     * @param childBeanNames the bean names of the child dependencies to add
+     * @return this dependency for method chaining
      */
     public Dependency addChildren(Iterable<String> childBeanNames) {
         return this.doAddChildren(createList(childBeanNames));
     }
 
     /**
-     * Finds and returns a child dependency by its bean name,
-     * or {@code null} if no such child exists.
+     * Returns the child dependency with the specified bean name.
+     * Equivalent to calling {@code child(childBeanName, false)}.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
      *   Dependency a = Dependency.create("A");
-     *   a.addChild("B");
-     *   Dependency b = a.child("B"); // returns child B
+     *   a.addChild("B").addChild("C");
+     *   Dependency c = a.child("C");
+     *   // c is the child dependency named "C"
      * }</pre>
      *
-     * @param childBeanName the bean name of the child to find
-     * @return the child {@link Dependency}, or {@code null} if not found
+     * @param childBeanName the bean name of the child to look up
+     * @return the child dependency, or {@code null} if not found
      */
     public Dependency child(String childBeanName) {
         return child(childBeanName, false);
     }
 
     /**
-     * Finds a child dependency by its bean name. If {@code addedIfAbsent} is {@code true}
-     * and no child is found, a new standalone {@link Dependency} is created and returned
-     * without being added to this dependency's children list.
+     * Returns the child dependency with the specified bean name, optionally creating one if absent.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
      *   Dependency a = Dependency.create("A");
-     *   Dependency b = a.child("B", true); // creates new standalone Dependency if B is absent
+     *   a.addChild("B");
+     *   Dependency b = a.child("B", false);   // returns existing child "B"
+     *   Dependency c = a.child("C", true);     // creates a new Dependency for "C"
+     *   Dependency d = a.child("D", false);    // returns null (not found)
      * }</pre>
      *
-     * @param childBeanName the bean name of the child to find
-     * @param addedIfAbsent if {@code true}, creates a new standalone dependency when the child is absent
-     * @return the child {@link Dependency}, or a new standalone instance if absent and {@code addedIfAbsent} is true,
-     *         or {@code null} if absent and {@code addedIfAbsent} is false
+     * @param childBeanName  the bean name of the child to look up
+     * @param addedIfAbsent  if {@code true} and no child is found, a new independent {@link Dependency} is created
+     *                       and returned (it is <em>not</em> added to this dependency's children and has no parent set)
+     * @return the child dependency, a newly created dependency if {@code addedIfAbsent} is {@code true} and the child
+     *         was not found, or {@code null} if the child was not found and {@code addedIfAbsent} is {@code false}
      */
     public Dependency child(String childBeanName, boolean addedIfAbsent) {
         Dependency child = findChild(childBeanName);
@@ -230,17 +237,18 @@ public class Dependency {
     }
 
     /**
-     * Searches through the direct children for a dependency matching the given bean name.
+     * Searches for a direct child dependency with the specified bean name.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
      *   Dependency a = Dependency.create("A");
      *   a.addChild("B");
-     *   Dependency found = a.findChild("B"); // returns child B or null
+     *   Dependency found = a.findChild("B");   // returns child "B"
+     *   Dependency missing = a.findChild("X"); // returns null
      * }</pre>
      *
-     * @param childBeanName the bean name to search for among children
-     * @return the matching child {@link Dependency}, or {@code null} if not found
+     * @param childBeanName the bean name of the child to find
+     * @return the matching child dependency, or {@code null} if no child with that bean name exists
      */
     protected Dependency findChild(String childBeanName) {
         List<Dependency> children = this.children;
@@ -253,15 +261,16 @@ public class Dependency {
     }
 
     /**
-     * Marks this dependency as duplicated.
+     * Marks this dependency as duplicated and returns it.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
-     *   Dependency dep = Dependency.create("A");
-     *   dep.duplicate(); // marks as duplicated
+     *   Dependency a = Dependency.create("A");
+     *   Dependency dup = a.duplicate();
+     *   // dup is the same instance as a, now marked as duplicated
      * }</pre>
      *
-     * @return this {@link Dependency} instance for fluent chaining
+     * @return this dependency, marked as duplicated
      */
     protected Dependency duplicate() {
         duplicated = true;
@@ -269,18 +278,18 @@ public class Dependency {
     }
 
     /**
-     * Adds a child dependency and sets this as its parent.
-     * Subclasses may override this to customize child-addition behavior.
+     * Adds the given child dependency to this dependency, setting this dependency as its parent.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
-     *   Dependency parent = Dependency.create("A");
-     *   Dependency child = Dependency.create("B");
-     *   parent.doAddChild(child);
+     *   Dependency a = Dependency.create("A");
+     *   Dependency b = Dependency.create("B");
+     *   a.doAddChild(b);
+     *   // b.parent() now equals a
      * }</pre>
      *
-     * @param child the child {@link Dependency} to add
-     * @return this {@link Dependency} instance for fluent chaining
+     * @param child the child dependency to add
+     * @return this dependency for method chaining
      */
     protected Dependency doAddChild(Dependency child) {
         child.setParent(this);
@@ -289,18 +298,18 @@ public class Dependency {
     }
 
     /**
-     * Adds multiple child dependencies from the given iterable.
-     * Subclasses may override this to customize batch child-addition behavior.
+     * Adds each dependency in the given iterable as a child of this dependency.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
-     *   Dependency parent = Dependency.create("A");
-     *   List<Dependency> kids = List.of(Dependency.create("B"), Dependency.create("C"));
-     *   parent.doAddChildren(kids);
+     *   Dependency a = Dependency.create("A");
+     *   List<Dependency> kids = Arrays.asList(Dependency.create("B"), Dependency.create("C"));
+     *   a.doAddChildren(kids);
+     *   // a now has children "B" and "C"
      * }</pre>
      *
-     * @param children the iterable of child {@link Dependency} instances to add
-     * @return this {@link Dependency} instance for fluent chaining
+     * @param children the child dependencies to add
+     * @return this dependency for method chaining
      */
     protected Dependency doAddChildren(Iterable<Dependency> children) {
         for (Dependency child : children) {
@@ -310,18 +319,17 @@ public class Dependency {
     }
 
     /**
-     * Factory method to create a new {@link Dependency} with the specified bean name.
+     * Factory method that creates a new {@link Dependency} with the given bean name.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
      *   Dependency a = Dependency.create("A");
-     *   a.addChild("B");
-     *   Dependency c = a.addChild("C").child("C");
-     *   c.addChild("D");
+     *   a.addChild("B").addChild("C");
      * }</pre>
      *
-     * @param beanName the name of the Spring bean
+     * @param beanName the name of the Spring bean; must not be blank
      * @return a new {@link Dependency} instance
+     * @throws IllegalArgumentException if {@code beanName} is blank
      */
     public static Dependency create(String beanName) {
         return new Dependency(beanName);
@@ -342,17 +350,18 @@ public class Dependency {
     }
 
     /**
-     * Compares this dependency to the specified object for equality based on the bean name.
+     * Compares this dependency to the specified object for equality.
+     * Two dependencies are considered equal if they have the same bean name.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
-     *   Dependency a1 = Dependency.create("A");
+     *   Dependency a = Dependency.create("A");
      *   Dependency a2 = Dependency.create("A");
-     *   assertTrue(a1.equals(a2)); // same bean name
+     *   boolean eq = a.equals(a2); // true
      * }</pre>
      *
      * @param o the object to compare with
-     * @return {@code true} if the other object is a {@link Dependency} with the same bean name
+     * @return {@code true} if the given object is a {@link Dependency} with the same bean name
      */
     @Override
     public boolean equals(Object o) {
@@ -363,15 +372,16 @@ public class Dependency {
     }
 
     /**
-     * Returns a hash code based on the bean name.
+     * Returns the hash code of this dependency, based on the bean name.
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
-     *   Dependency a = Dependency.create("A");
-     *   int hash = a.hashCode();
+     *   Dependency a1 = Dependency.create("A");
+     *   Dependency a2 = Dependency.create("A");
+     *   boolean same = a1.hashCode() == a2.hashCode(); // true
      * }</pre>
      *
-     * @return the hash code of the bean name
+     * @return the hash code computed from the bean name
      */
     @Override
     public int hashCode() {
@@ -379,17 +389,17 @@ public class Dependency {
     }
 
     /**
-     * Returns a string representation of this dependency, including its bean name
-     * and children if any.
+     * Returns a string representation of this dependency, consisting of the bean name
+     * followed by its children (if any).
      *
      * <h3>Example Usage</h3>
      * <pre>{@code
      *   Dependency a = Dependency.create("A");
-     *   a.addChild("B");
-     *   String str = a.toString(); // e.g. "A[B]"
+     *   a.addChild("B").addChild("C");
+     *   String str = a.toString(); // "A[B, C]"
      * }</pre>
      *
-     * @return a string representation of this dependency
+     * @return the string representation of this dependency
      */
     @Override
     public String toString() {
